--- a/app/views/avaliacaos/_avaliacao.html.erb
+++ b/app/views/avaliacaos/_avaliacao.html.erb
@@ -23,26 +23,42 @@
           </div>
           <br>
           <center>
-					<%= form_with model: @prova_aluno, local: true do |f| %>
-                     	<% questao.alternativas.each do |alternativa| %>
-                     		<%= render 'prova_alunos/form' %>
+          			<%= render 'prova_alunos/form' %>
+          
+          
+ 
+          
+            
+          
+        
 
-                     			<%= f.radio_button :resp1, alternativa.opcao1 %> <%= alternativa.opcao1 %><br />
-    							<%= f.radio_button :resp1, alternativa.opcao2 %> <%= alternativa.opcao2 %><br />
-    							<%= f.radio_button :resp1, alternativa.opcao3 %> <%= alternativa.opcao3 %><br />
-    							<%= f.radio_button :resp1, alternativa.opcao4 %> <%= alternativa.opcao4 %><br />
-						   		<br>
-							   	<%= f.submit %>
+					
+              <% questao.alternativas.each do |alternativa| %>
+                      
+
+                <form action="">
+
+                  Resposta certa: <div class="certa" id="certa" ><%= questao.respostacerta %></div> <br><br>
+                  Número Questão: <div class="questao" id="questao" ><%= questao.id %></div> <br><br>
+
+
+  							  <%= alternativa.opcao1 %><input type="radio" name="resp1" value=<%= alternativa.opcao1 %>> <br>
+  							  <%= alternativa.opcao2 %><input type="radio" name="resp1" value=<%= alternativa.opcao2 %>> <br>
+  							  <%= alternativa.opcao3 %><input type="radio" name="resp1" value=<%= alternativa.opcao3 %>> <br>
+  							  <%= alternativa.opcao4 %><input type="radio" name="resp1" value=<%= alternativa.opcao4 %>> <br>
+  							  <br>
+  							  <button id= "botao" onclick="salvaresposta('<%= questao.respostacerta %>', '<%= questao.id %>')"> ENVIAR RESPOSTA</button>   
+
+                </form>
+							   	  
 						<% end %>
-		
-                     <% end %>
 
           </center>
           </div>
           <div class="modal-footer">
           
             <% if index2 != avaliacao.questaos.size %>
-              <button type="button" class="btn btn-default btn-next" data-toggle="modal" data-target="#modal-<%= avaliacao.titulo.parameterize %>-<%= index2 + 1 %>" onclick="closenext()" data-dismiss="modal">Next => </button>
+              <button type="button" class="btn btn-default btn-next" data-toggle="modal" data-target="#modal-<%= avaliacao.titulo.parameterize %>-<%= index2 + 1 %>" onclick="closenext()" data-dismiss="modal" >Next => </button>
             <% end %>
 
              <%= label_tag :tempo, class: "form-control", id: "cronometro" do %>
