--- a/app/views/capitulos/index.html.erb
+++ b/app/views/capitulos/index.html.erb
@@ -3,45 +3,23 @@
 <!-- Init script -->
 <script type="text/javascript">
 // Using global config
-window.CLIPPY_CDN = './agents/'
-    clippy.load('F1', function(agent) {
+//window.CLIPPY_CDN = './agents/'
+  //  clippy.load('F1', function(agent) {
         // Do anything with the loaded agent
-        agent.show();
-        agent.animate();
-        agent.stop();
-        agent.speak('Testeando animação.');
+    //    agent.show();
+     //   agent.animate();
+     //   agent.stop();
+      //  agent.speak('Testeando animação.');
 
 
-        agent.play('Searching');agent.play('Searching');
-        agent.play('Wave');agent.play('Wave');
-        agente.stop();
-
-
-    });
-
-
-
-
-</script>
+      //  agent.play('Searching');agent.play('Searching');
+      //  agent.play('Wave');agent.play('Wave');
+      //  agente.stop();
+   // });
 
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    <script>
     //PEGAR NIVEL
     //var nivel = "<?php echo $nivel; ?>";
     //alert(nivel); APARECE UMA TELA ALERTANDO O VALOR DA VARIAVEL NIVEL
@@ -63,11 +41,6 @@ window.CLIPPY_CDN = './agents/'
 
 
 
-
-
-
-
-
 <center>
 
 
@@ -76,27 +49,17 @@ window.CLIPPY_CDN = './agents/'
 
     <h2>
 
-        <br><br><br><br>
+        <br><br>
 <!--    <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModalClasse1" onclick="inicia()"> Teste
   </button> -->
-    <input type="button" onclick="funcao1()" value="Exibir Alert" />
+    <!-- <input type="button" onclick="funcao1()" value="Exibir Alert" /> -->
 
-
-
-
-
-
-
-
-
-
-<br>
 
 
 
       <% @capitulos.each do |capitulo| %>
     <tr>
-      <td><%= link_to capitulo.titulo, capitulo_path(capitulo) %></td> <br><br>
+      <h3><td><%= link_to capitulo.titulo, capitulo_path(capitulo) %></td> <br><br></h3>
     </tr>
   <% end %>
 
@@ -105,8 +68,8 @@ window.CLIPPY_CDN = './agents/'
 
 
 
-__________________________________________________________________________________________________________
-LINKS ANTIGOS: <br>
+
+<!--LINKS ANTIGOS: <br>
         <%= link_to "Tópico 1 – Conceitos importantes", capitulo1_path %>
         <br><br>
         <%= link_to "Tópico 2 – Conceitos chave de Orientação a Objetos", capitulo2_path %>
@@ -116,7 +79,7 @@ LINKS ANTIGOS: <br>
         <%= link_to "Tópico 4 – Exercícios", capitulo4_path %>
         <br><br>
         <%= link_to "Tópico 5 – Prova final", capitulo5_path %>
-        <br><br>
+        <br><br> -->
    <!--     <a href='/topico1' id='linkDesabilitado2'> Link teste desabilitar </a> -->
 
         <!-- echo "<td> <h3><a href='modal/modalTopico2.php' id='linkDesabilitado2'> Unidade 2 </a> </h3></td>"; -->
@@ -127,7 +90,7 @@ LINKS ANTIGOS: <br>
 
 
 <br><br><br><br>
-<if aluno.logged_in?>
-   <div>Logado como <strong><%= current_user.name %></strong>.</div> <!-- ESTÁ FUNCIONANDO OK! - Qqr problema, conferir se casdatro está correto -->
+<!-- <if aluno.logged_in?>
+   <div>Logado como <strong><%= current_user.name %></strong>.</div> --><!-- ESTÁ FUNCIONANDO OK! - Qqr problema, conferir se casdatro está correto --> 
 <end>
 
