--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -15,8 +15,7 @@
   </div>
 
     <div class="field">
-    <%= f.label :nivel %><br />
-    <%= f.text_field :nivel, autofocus: true, autocomplete: "nivel" %>
+    <%= f.text_field :nivel, autofocus: true, autocomplete: "nivel", value: "1", type: "hidden" %>
   </div>
 
 
