--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,7 @@
     <%= render 'layouts/header' %>
     <% flash.each do |name, msg| %>
         <%= content_tag(:div, msg, class: "alert alert-info") %>
+        <img id="animar" src="/assets/animacoes/feliz/feliz.gif" width="130px"/>
 
 <% end %>
     <div class="container">
