--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -13,7 +13,7 @@
 	  <h1>Bem vindo ao Ambiente Virtual de Aprendizagem</h1>
 	
 	  <h2>
-	    Para utilizar esse ambiente, você precisa estar cadastrado. E somente um administrador pode fazer o cadastro de um novo aluno e de um novo admnistrador.
+	    <!--Para utilizar esse ambiente, você precisa estar cadastrado. E somente um administrador pode fazer o cadastro de um novo aluno e de um novo admnistrador.-->
 	    <!-- <a href="http://www.railstutorial.org/">Ruby on Rails Tutorial</a>
 	    sample application.-->
 	  </h2>
