--- a/app/views/capitulos/show.html.erb
+++ b/app/views/capitulos/show.html.erb
@@ -1076,10 +1076,10 @@ function ajuda() {
 <center> <h1><%= @capitulo.titulo %> </h1></center>
 <!--<center><h3>Conteudo</h3></center>-->
 <%= render @capitulo.conteudos %>
-<br>
+
 <center><!--<h2>Avaliação</h2>-->
-<%= link_to "Avaliação", avaliacaos_path(:id => @capitulo.id) %>
-<br><br>
+<!--<%= link_to "Avaliação", avaliacaos_path(:id => @capitulo.id) %>-->
+
 <%= render @capitulo.avaliacaos %>
 </center>
 
